"Add F-Curve Modifier" applies only to Active F-Curve #100659

Closed
opened 2022-08-27 00:24:27 +07:00 by Alexander · 14 comments

System Information
Operating system: Ubuntu 20.04
Graphics card: Geforce MX230

Blender Version
Broken: 3.2.1. and next

Short description of error
"Add F-Curve Modifier" applies only to the active F curve, although even the description of the operator says that it should be applied to all selected, not just the active curve

2022-08-27 01-19-17.mp4

Exact steps for others to reproduce the error

  1. Create animation
  2. Select F Curves
  3. Add F Curve Modifier through "Keys->Add F-Curve Modifier"
**System Information** Operating system: Ubuntu 20.04 Graphics card: Geforce MX230 **Blender Version** Broken: 3.2.1. and next **Short description of error** "Add F-Curve Modifier" applies only to the active F curve, although even the description of the operator says that it should be applied to all selected, not just the active curve [2022-08-27 01-19-17.mp4](https://archive.blender.org/developer/F13419215/2022-08-27_01-19-17.mp4) **Exact steps for others to reproduce the error** 1. Create animation 2. Select F Curves 3. Add F Curve Modifier through "Keys->Add F-Curve Modifier"

Added subscriber: @sanek2005

Added subscriber: @sanek2005

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Thanks for the report. This is not a bug as far as I understand.
Uncheck Only Active from redo panel. This will work for you. Can you check?

Thanks for the report. This is not a bug as far as I understand. Uncheck `Only Active` from redo panel. This will work for you. Can you check?

Now it works. but still, users are more likely to expect operators to be applied to all curves rather than just the active one. someone from the animation and rigging module should take this into account, changing the default presets is not so difficult

Now it works. but still, users are more likely to expect operators to be applied to all curves rather than just the active one. someone from the animation and rigging module should take this into account, changing the default presets is not so difficult

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

yes, changing the default value is straightforward. I'll leave the decision on developers.

yes, changing the default value is straightforward. I'll leave the decision on developers.

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

"Add F-Curve Modifier" applies only to the active F curve, although even the description of the operator says that it should be applied to all selected, not just the active curve

The tooltip states "Add F-Modifier to the active/selected F-Curves". It could be rewritten to be a bit more explicit, and state "Add F-Modifier to the active or selected F-Curves" (emphasis just for clarity here, I don't intend to introduce bold text to the tooltip system).

Personally I feel that the current behaviour is the right one, for two reasons:

  1. It performs the first-mentioned alternative ("active").
  2. The performed action modifies what is visible; you can see in the side-panel that the modifier is added to the active curve. Making the modification of "invisible FCurves" (you see the curves themselves, but not their modifier list) an explicit step seems the right way to me.

This is of course still subjective, so I'll discuss this in today's module meeting to see what others think.

> "Add F-Curve Modifier" applies only to the active F curve, although even the description of the operator says that it should be applied to all selected, not just the active curve The tooltip states "*Add F-Modifier to the active/selected F-Curves*". It could be rewritten to be a bit more explicit, and state "Add F-Modifier to the active **or** selected F-Curves" (emphasis just for clarity here, I don't intend to introduce bold text to the tooltip system). Personally I feel that the current behaviour is the right one, for two reasons: 1. It performs the first-mentioned alternative ("active"). 2. The performed action modifies what is visible; you can see in the side-panel that the modifier is added to the active curve. Making the modification of "invisible FCurves" (you see the curves themselves, but not their modifier list) an explicit step seems the right way to me. This is of course still subjective, so I'll discuss this in today's module meeting to see what others think.
Collaborator

Added subscribers: @JasonSchleifer, @LucianoMunoz, @BClark

Added subscribers: @JasonSchleifer, @LucianoMunoz, @BClark
Collaborator

My expectation is that it would apply to selected curves, not only active (the current default).
If I use the channels- extrapolate cycle, it works on selected channels.
Checking my defaults I have "active" turned off so it applies the modifier to what I have selected not the thing I accidentally left active and then have to undo or copy it or edit it after.

So my request/expectation would be to default it to work on selected not only Active.

Maybe @LucianoMunoz or @JasonSchleifer has some input as well.

My expectation is that it would apply to selected curves, not only active (the current default). If I use the channels- extrapolate cycle, it works on selected channels. Checking my defaults I have "active" turned off so it applies the modifier to what I have selected not the thing I accidentally left active and then have to undo or copy it or edit it after. So my request/expectation would be to default it to work on selected not only Active. Maybe @LucianoMunoz or @JasonSchleifer has some input as well.
Philipp Oeser removed the
Interest
Animation & Rigging
label 2023-02-09 14:34:45 +07:00
Sybren A. Stüvel added
Status
Confirmed
Type
Bug
and removed
Status
Needs Info from Developers
Type
Report
labels 2023-03-10 11:45:09 +07:00

Marking as bug, as discussed in yesterday's A&R module meeting

Marking as bug, as discussed in [yesterday's A&R module meeting](https://devtalk.blender.org/t/2023-03-09-animation-rigging-module-meeting/28204)
Sybren A. Stüvel added this to the Animation & Rigging project 2023-03-10 11:45:58 +07:00

Didn't Christoph already tackled this issue with this commit coming in 3.5? https://archive.blender.org/developer/D17066

Didn't Christoph already tackled this issue with this commit coming in 3.5? https://archive.blender.org/developer/D17066

That patch adds "Add F-Curve Modifier" to more places. It doesn't change the behaviour of the menu items where already present.

That patch adds "Add F-Curve Modifier" to more places. It doesn't change the behaviour of the menu items where already present.
Sybren A. Stüvel self-assigned this 2023-03-13 15:16:03 +07:00
Sybren A. Stüvel changed title from "Add F-Curve Modifier" apply only at Active F-Curve to "Add F-Curve Modifier" applies only to Active F-Curve 2023-03-13 15:22:42 +07:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-13 15:24:38 +07:00
Sybren A. Stüvel added this to the 3.5 milestone 2023-03-13 15:24:42 +07:00
Sybren A. Stüvel removed this from the Animation & Rigging project 2023-03-13 15:24:49 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100659
There is no content yet.